--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/fragmento"
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.vicsoft.wheater.wheater.ForecastFragment"/>
+        android:name="com.vicsoft.wheater.wheater.fragment.CityPagerFragment"
+        tools:layout="@layout/fragment_city_pager"/>
 
 </LinearLayout>
