--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.vicsoft.wheater.wheater.SettingsActivity">
+    tools:context="com.vicsoft.wheater.wheater.activity.SettingsActivity">
 
     <TextView
         android:text="@string/selecciona_las_unidades"
