--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -1,61 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vicsoft.wheater.wheater.ForecastActivity">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context="com.vicsoft.wheater.wheater.activity.ForecastActivity">
 
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/city"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/wheaterLayout"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageForecast">
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/Madrid"/>
+
+    <LinearLayout
+        android:id="@+id/wheaterLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/city"
+        android:layout_toRightOf="@+id/imageForecast"
+        android:orientation="vertical">
 
         <TextView
-            android:text="TextView"
+            android:id="@+id/tempMax"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tempMax"/>
+            android:text="TextView"/>
 
         <TextView
-            android:text="TextView"
+            android:id="@+id/tempMin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tempMin"/>
+            android:text="TextView"/>
 
         <TextView
-            android:text="TextView"
+            android:id="@+id/humedity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/humedity"/>
+            android:text="TextView"/>
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/imageForecast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ico_02"
-        android:id="@+id/imageForecast"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_below="@+id/city"
+        app:srcCompat="@drawable/ico_02"/>
 
     <TextView
-        android:text="TextView"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:layout_below="@id/imageForecast"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/imageForecast"
+        android:text="TextView"/>
 
 </RelativeLayout>
