--- a/app/src/main/res/layout/fragment_city_pager.xml
+++ b/app/src/main/res/layout/fragment_city_pager.xml
@@ -2,11 +2,20 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:orientation="vertical"
              tools:context="com.vicsoft.wheater.wheater.fragment.CityPagerFragment">
 
+
     <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/view_pager"/>
+        android:layout_height="match_parent">
+
+    <!--    <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/> -->
+
+    </android.support.v4.view.ViewPager>
+
 
 </FrameLayout>
