--- a/app/src/main/res/layout-sw400dp-port/activity_forecast.xml
+++ b/app/src/main/res/layout-sw400dp-port/activity_forecast.xml
@@ -10,7 +10,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_city_list"></FrameLayout>
+        android:id="@+id/fragment_city_pager"></FrameLayout>
 
 
 
