--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -1,4 +1,19 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/list"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"/>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_plus"
+        android:id="@+id/float_button"/>
+
+</android.support.design.widget.CoordinatorLayout>
